Fix link underline wrapping issue.

--- a/themes/michaelpanik/source/css/main.css
+++ b/themes/michaelpanik/source/css/main.css
@@ -116,30 +116,17 @@ article.page {
 
 body > main a {
     text-decoration: none;
-    display: inline-block;
+    display: inline;
     position: relative;
     transition: .1s all linear;
     color: #212827;
-}
-
-body > main a:after {
-    content: '';
-    display: block;
-    position: absolute;
-    border-bottom: 6px solid rgba(102, 230, 207, .7);
-    width: 100%;
-    bottom: 0;
-    transition: .1s all linear;
+    box-shadow: inset 0 0em white, inset 0 -0.45em rgba(102, 230, 207, .7);
 }
 
 body > main a:focus,
 body > main a:hover {
     background: rgba(102,230,207,.7);
-}
-
-body > main a:focus:after,
-body > main a:hover:after {
-    border-color: transparent;
+    box-shadow: inset 0 0em white, inset 0 -0.45em transparent;
 }
 
 .copyright {
@@ -195,14 +182,15 @@ p.hero__subtitle {
     margin: 0;
 }
 
-p.hero__subtitle>a:after {
-    border-color: rgba(33, 40, 39, .7);
+p.hero__subtitle>a {
+    box-shadow: inset 0 0em transparent, inset 0 -0.45em rgba(33, 40, 39, .7);
 }
 
 p.hero__subtitle>a:focus,
 p.hero__subtitle>a:hover {
     background: rgba(33, 40, 39, .7);
     color: #5be2c2;
+    box-shadow: inset 0 0em transparent, inset 0 -0.45em transparent;
 }
 
 section#portfolio {
